Alembic import. Normals are wrong where three edges meet while adaptive subdiv #49257

Closed
opened 2016-09-05 15:01:09 +02:00 by Yegor · 9 comments

System Information
CentOS, Nvidia Titan

Blender Version
Broken: 2.78 RC1

Short description of error
Adaptive subdiv gives wrong normals when three edges meet on imported alembic

Exact steps for others to reproduce the error
Import alembic.
Smooth with adaptive subdiv enabled.
Render the region where you have a vertex with three edges connected.
blender_adaptive_subdiv_faces_corners_bug.png
blender_adaptive_subdiv_faces_corners_bug.abc

blender_adaptive_subdiv_faces_corners_bug.blend

**System Information** CentOS, Nvidia Titan **Blender Version** Broken: 2.78 RC1 **Short description of error** Adaptive subdiv gives wrong normals when three edges meet on imported alembic **Exact steps for others to reproduce the error** Import alembic. Smooth with adaptive subdiv enabled. Render the region where you have a vertex with three edges connected. ![blender_adaptive_subdiv_faces_corners_bug.png](https://archive.blender.org/developer/F353560/blender_adaptive_subdiv_faces_corners_bug.png) [blender_adaptive_subdiv_faces_corners_bug.abc](https://archive.blender.org/developer/F353562/blender_adaptive_subdiv_faces_corners_bug.abc) [blender_adaptive_subdiv_faces_corners_bug.blend](https://archive.blender.org/developer/F353563/blender_adaptive_subdiv_faces_corners_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscriber: @Sergey

Added subscriber: @Sergey
Kévin Dietrich was assigned by Sergey Sharybin 2016-09-05 15:21:00 +02:00

Kevin, mind having a look? :)

Kevin, mind having a look? :)
Kévin Dietrich removed their assignment 2016-09-05 18:10:32 +02:00
Mai Lavelle was assigned by Kévin Dietrich 2016-09-05 18:10:32 +02:00

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

As far as I can tell, this doesn't have anything to do with Alembic. Normals are not read from Alembic archives, rather, they are generated on Blender's side based on how they are stored in the archive (either vertex/flat or face varying/smooth) ; this is because it is easier to recompute them than trying to figure out how other software store their normals and what to do with them. (In the future, with enough data, that might change.)

The problem still persists when removing the cache modifier and appears to be related to the dicing scale. By changing the dicing scale in the example file from 10.0 down to 1.0 the problem disappears. So, bouncing the report to Mai for investigation.

As far as I can tell, this doesn't have anything to do with Alembic. Normals are not read from Alembic archives, rather, they are generated on Blender's side based on how they are stored in the archive (either vertex/flat or face varying/smooth) ; this is because it is easier to recompute them than trying to figure out how other software store their normals and what to do with them. (In the future, with enough data, that might change.) The problem still persists when removing the cache modifier and appears to be related to the dicing scale. By changing the dicing scale in the example file from 10.0 down to 1.0 the problem disappears. So, bouncing the report to Mai for investigation.
Author

Yes, Kevin, it happens only on the imported object, not on the generated inside Blender. And on 1.0 it disappears visually, but it still there, obviously.

Yes, Kevin, it happens only on the imported object, not on the generated inside Blender. And on 1.0 it disappears visually, but it still there, obviously.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

While the underlying issue is still there (precision loss for which there doesn't seem to be a clean solution) this should no longer be visible in renders due to 8f28441487.

While the underlying issue is still there (precision loss for which there doesn't seem to be a clean solution) this should no longer be visible in renders due to 8f28441487.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49257
No description provided.